kubernetes/src/main/resources/ingress/hello-world1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: test-ingress
spec:
  selector:
    matchLabels:
      greeting: hello
      department: world
  replicas: 2
  template:
    metadata:
      labels:
        greeting: hello
        department: world
    spec:
      containers:
        - name: hello
          image: "hello-app:2.0"
          imagePullPolicy: IfNotPresent
