kubernetes/src/main/resources/ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: test-ingress
spec:
  type: NodePort
  selector:
    greeting: hello
    department: world
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 50000
