kubernetes/src/main/resources/ingress/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: test-ingress
spec:
  type: NodePort
  selector:
    greeting: hello
    department: kubernetes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
