kubernetes/src/main/resources/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: hello-world
              servicePort: 60000
          - path: /kube
            backend:
              serviceName: hello-kubernetes
              servicePort: 80
